--- a/visualize.ipynb
+++ b/visualize.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
     "plt.plot(list(map(lambda x: str(x), list(index))), list(value), label='AVERAGE', linewidth=2.5, marker='o', color='black')\n",
     "\n",
     "plt.legend(loc='lower left', fontsize=10, facecolor='white')\n",
-    "plt.savefig('Accuracy Line Chart.png', dpi=300)\n",
+    "plt.savefig('accuracy_line_chart.png', dpi=300)\n",
     "plt.show()\n",
     "\n",
     "\n"
